css/styleproject.css
* {
	box-sizing: border-box;
}
/* BODY PROPERTIES */

html {
	font-size: calc(6px + 1vw);
	line-height: calc(.5rem + 0.5vw);
}
body {
	background-color: #FCFCFC;
	font-family: Lato;
}
b {
	font-weight: 600;
}
i {
	font-style: italic;
}
h1 {
	font-size: 1.6rem;
	font-weight: 300;
	letter-spacing: -.05rem;
	line-height: 125%;
}
h2 {
	font-family: Montserrat;
	font-size: 1.8rem;
	font-weight: 700;
	letter-spacing: -.05rem;
}
h3 {
	font-size: 1.8rem;
	font-weight: 500;
	letter-spacing: -.05rem;
	line-height: 125%;
}
h4 {
	color: #BDE3E5;
	font-size: 3rem;
	font-style: italic;
	font-weight: 1000;
	line-height: 90%;
}
h5 {
	font-family: Montserrat Subrayada;
	font-size: 4.8rem;
	grid-column: 1;
	grid-row: 5;
	letter-spacing: .8rem;
	text-align: right;
	margin-bottom: .5rem;
	width: 55vw;
}
h6 {
	font-family: Montserrat;
	font-size: 3.6rem;
	font-weight: 900;
	letter-spacing: -.05rem;
	line-height: 62%;
}
a {
	color: #FFF;
}
section {
	color: #312F30;
	margin-top: .5rem;
	padding: .5rem .5rem;
}
button.blue {
	color: #FFF;
	background: #0070E0;
	border-top: .5rem solid #0070E0;
	border-bottom: .5rem solid #0070E0;
	border-left: .5rem solid #0070E0;
	border-right: .5rem solid #0070E0;
	font-family: Montserrat;
	font-size: calc(1.2rem + .7vw);
	font-weight: 500;
	width: 33vw;
}
button.blue:hover {
	letter-spacing: .05rem;
}
.buttonContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: 1fr .5fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	width: 98vw;
}
.blueButton {
	grid-column: 2;
	grid-row: 2;
	margin-top: 3rem;
	position: relative;
	z-index: 50;
}
button a {
	text-decoration: none;
}
/* HEADER */

.header {
	background-color: #FFF;
	display: flex;
	height: 75px;
	justify-content: space-between;
	align-items: center;
	overflow: hidden;
	padding: .5rem 10px;
}
.header a {
	color: #0070E0;
	float: left;
	font-family: Montserrat;
	font-size: calc(1.6rem + .1vw);
	font-weight: 700;
	line-height: calc(.5rem + 0.5vw);
	padding: 1.5vw;
	text-align: center;
	text-decoration: none;
}
.header a:hover {
	letter-spacing: .05rem;
	transition: .5s;
}
.header img {
	z-index:0;
}
.header-right {
	float: right;
	position: relative;
	z-index: 2;
}
/*ALL SECTIONS BAR/HEADER*/

.barContainer {
	display: grid;
	empty-cells: show;
	grid-gap: 1rem;
	grid-template-columns: .05fr 1fr .05fr;
	padding-top: 2rem;
	margin: 0 auto;
	width: 98vw;
}
.barTop {
	grid-column: 2;
	grid-row: 1;
	overflow-x: hidden;
	overflow-y: hidden;
	position: absolute;
	height: 30rem;
	width: 98%;
	z-index: 0;
}
.barHead {
	grid-column: 2;
	grid-row: 2;
	margin-top: 2rem;
	width: 80vw;
	z-index: 1;
}
.barHead h2 {
	font-size: 1.75rem;
}
.barHead h3 {
	font-size: calc(16px + .5vw);
	max-width: 80vw;
}
/*HERO */

.heroContainer {
	background-color: #EEF6FF;
	display: grid;
	empty-cells: show;
	grid-template-columns: .05fr 1fr .05fr;
	grid-template-rows: 1fr .25fr .5fr .5fr;
	grid-gap: 1rem;
	justify-items: center;
	align-items: center;
	padding-top: 2rem;
	margin: 0 auto;
	width: 98vw;
}
.caseImg {
	grid-column: 2;
}
.caseImg img {
	width: 75vw;
}
.caseLogo {
	font-family: Montserrat Subrayada;
	font-size: calc(46px + 2vw);
	grid-column: 2;
	letter-spacing: .8rem;
	text-align: center;
}
.caseBody {
	font-size: calc(15px + 1vw);
	font-weight: 500;
	grid-column: 2;
	grid-row: 3;
	line-height: 125%;
	text-align: center;
	width: 75vw;
}
.prototypeButton {
	grid-column: 2;
	grid-row: 1;
	padding-top: 1rem;
	position: relative;
	top: -7rem;
}
/* ROLES ETC */

.roleContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: .35fr .05fr .05fr 1fr;
	margin: 0 auto;
	grid-gap: 1rem;
	width: 98vw;
}
.roleList1, .roleList2, .roleList3 {
	grid-column: 2 /span 3;
	padding-top: 1rem;
}
/* GREEN DIVIDER 1*/

.greenDiv {
	background-color: #DFF2F2;
	display: grid;
	grid-column: 1fr;
	grid-row: 1fr;
	height: 10rem;
	margin-top: 2rem;
	margin-bottom: 2rem;
	width: 100vw;
}
.nav2 {
	display: none;
}
/* PROBLEM + SOLUTION */

.probContainer {
	display: grid;
	grid-gap: 1rem;
	grid-template-columns: .05fr 1fr .05fr;
	margin: 0 auto;
	width: 98vw;
}
.probList {
	grid-column: 2;
	padding-top: 2rem;
}
/* DISCOVERY ETC HEADER */

.discContainer {
	display: grid;
	empty-cells: show;
	grid-gap: 1rem;
	grid-template-columns: .05fr 1fr .05fr;
	margin: 0 auto;
	width: 98vw;
}
.discHeader {
	font-family: Montserrat;
	font-size: 3.4rem;
	font-weight: 700;
	grid-column: 2;
	letter-spacing: -.2rem;
	line-height: 80%;
	margin-top: 5rem;
}
/* COMPETITIVE ANALYSIS MAIN*/

.compContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: .35fr .5fr .2fr .65fr;
	margin: 0 auto;
	margin-top: 5rem;
	grid-gap: 1rem;
	width: 98vw;
}
.compContainer h1, .compContainer h3 {
	font-size: calc(14px + .8vw);
}
.compList1, .compList2, .compList3, .compList4 {
	grid-column: 2 /span 3;
}
/* USER SURVEYS MAIN*/

.survContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: .95fr 1fr .95fr;
	grid-gap: 1rem;
	margin: 0 auto;
	margin-top: 5rem;
	width: 98vw;
}
.survContainer h1 {
	width: 35vw;
}
.survContainer img {
	width: 5vw;
}
.survList1, .survList2, .survList3, .survList4 {
	grid-column: 2;
	margin-top: 2rem;
	text-indent: .25rem;
}
.surveyButton {
	grid-column: 2;
	margin-top: 5rem;
}
/* USER PERSONAS MAIN */

.persContainer {
	display: grid;
	empty-cells: show;
	grid-gap: 1rem;
	grid-template-columns: .05fr 1fr 1fr .05fr;
	margin: 0 auto;
	margin-top: 5rem;
	width: 98vw;
}
.persImg1, .persImg2 {
	grid-column: 2;
}
.persImg1 img, .persImg2 img {
	position: relative;
	top: 2rem;
	width: 40vw;
	z-index: 0;
}
.persD1, .persD2 {
	grid-column: 3;
	line-height: 160%;
}
.persList1, .persList2, .persList3, .persList4, .persList5, .persList6 {
	grid-column: 2 / span 3;
	line-height: 150%;
	padding-top: 3rem;
	width: 90vw;
}
/* USER STORIES */

.storContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: .5fr .1fr .1fr .1fr .5fr;
	grid-template-rows: 1fr 1fr;
	margin: 0 auto;
	margin-top: 5rem;
	grid-gap: 1rem;
	width: 98vw;
}
/* ... */

